<resources>
    <string name="app_name">返利</string>
    <string name="start_button">跳过</string>
    <string name="app_neework">商城返利</string>
    <string name="rb_index">首页</string>
    <string name="rb_network_mall">全网商城</string>
    <string name="rb_manage_money">理财返利</string>
    <string name="rb_eat_play">吃完住行</string>
    <string name="rb_my">我的</string>
    <string name="rb_index_searchView">搜淘宝/京东宝贝  拿返利</string>
    <string name="rb_index_searchView_new">消息</string>
    <string name="rb_index_SuperReturn_new">超级返</string>

</resources>
